# house-padi-engine-v2

./: ARCHITECTURE.md  MERGE_SUMMARY.md  PROGRESS_MEMORY.md  QUICK_START.md  TESTING_GUIDE.md  pyproject.toml
app/: agent_engine.py  cache_service.py  config.py  database.py  dependecies.py  intent_transformer.py  main.py  ui_registry.py  vector_service.py
app/models/: chat.py  property.py
app/routes/: auth_routes.py  chat_routes.py  property_routes.py
app/schemas/: payloads.py
app/services/: chat_service.py  vector_service.py
app/tools/: chat_ops.py  kyc_ops.py  lease_ops.py  payment_ops.py  property_ops.py  tour_ops.py
supabase/: README.md  config.toml  seed.sql
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260715000000_create_housepadi_schema.sql
