[project]
name = "house-padi-backend-v2"
version = "1.0.0"
description = "Production-ready HousePadi multi-tenant backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.5.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "langchain-core>=0.2.0",
    "pyjwt[crypto]>=2.8.0",
    "anyio>=4.4.0",
    "deepagents>=0.6.12",
    "langchain-openai>=1.3.3",
    "email-validator>=2.3.0",
    "langchain-groq>=1.1.3",
    "langchain-google-vertexai>=3.2.4",
    "sentence-transformers>=5.6.0",
    "langchain-google-genai>=4.2.6",
    "langchain-ollama>=1.1.0",
]
